<?xml version="1.0"?>
<package format="2">
  <name>ros_api</name>
  <version>0.0.0</version>
  <description>The ros_api package</description>

  <maintainer email="ptsingaman@laas.fr">Phani Teja Singamaneni</maintainer>


  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <author email="ptsingaman@laas.fr">Phani Teja Singamaneni</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
